UI updates; app is 100% responsive now

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     </ol>
 
                     <div id="landing-btn-container">
-                        <button class="btn btn-default" type="button" id="landingBtn" onclick="goToBooks()" value="go-to-books">let's get started!</button>
+                        <button class="btn btn-primary" type="button" id="landingBtn" onclick="goToBooks()" value="go-to-books">let's get started!</button>
                     </div>
 
                 </div>
@@ -43,7 +43,7 @@
         <!-- book search page -->
         <div class="container find-book-page hide">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-9">
 
                     <form class="form-inline" id="book-search-form">
 
@@ -51,7 +51,7 @@
                         <br />
                         <div class="form-group">
                             <input class="form-control" type="text" id="book-input" placeholder="e.g. author, topic, genre" autofocus />
-                            <button class="btn btn-default" type="submit" id="booksBtn" value="search-for-books">submit</button>
+                            <button class="btn btn-primary" type="submit" id="booksBtn" value="search-for-books">submit</button>
                         </div>
                     </form>
 
@@ -90,7 +90,7 @@
 
                 <div class="col-md-4">
                     <div class="side-panel-wrap">
-                        <button class="btn btn-default" type="button" id="coffeeShopBtn" value="go-to-final" disabled>select this coffee shop</button>
+                        <button class="btn btn-primary" type="button" id="coffeeShopBtn" value="go-to-final" disabled>select this coffee shop</button>
                         <div id="coffee-shop-reviews">
                         </div>
                     </div>
@@ -165,7 +165,7 @@
                                             <label for="end" id="endLabel">end</label>
                                             <input class="form-control" type="text" id="end" disabled/>
                                             <br />
-                                            <button class="btn btn-default" type="button" id="finalBtn" value="get-directions">submit</button>
+                                            <button class="btn btn-primary" type="button" id="finalBtn" value="get-directions">submit</button>
                                         </div>
 
                                     </form>
