minor text fix on final page

--- a/index.html
+++ b/index.html
@@ -116,7 +116,13 @@
                             <div class="selected-coffee-shop-name"></div>
                             <span class="final-page-shop-address">At:</span>
                             <div class="selected-coffee-shop-vicinity"></div><br />
-                            <span class="final-page-guide">If your location was not detected, use the input fields to get directions to the coffee shop you selected.</span>
+                            <span class="final-page-guide">If your location was not detected:</span>
+                            <br />
+                            <span class="final-page-guide">use the input fields to get directions</span>
+                            <br />
+                            <span class="final-page-guide">to the coffee shop you selected.</span>
+
+
                         </div>
                     </div>
                 </div>
