minor bug fix on final page (wrapped "final-page-guide" in div w/ word wrap)

--- a/index.html
+++ b/index.html
@@ -116,13 +116,10 @@
                             <div class="selected-coffee-shop-name"></div>
                             <span class="final-page-shop-address">At:</span>
                             <div class="selected-coffee-shop-vicinity"></div><br />
-                            <span class="final-page-guide">If your location was not detected:</span>
-                            <br />
-                            <span class="final-page-guide">use the input fields to get directions</span>
-                            <br />
-                            <span class="final-page-guide">to the coffee shop you selected.</span>
-
-
+                            <div class="final-page-guide">
+                                <span>If your location was not detected:</span><br />
+                                <span>use the input fields to get directions to the coffee shop you selected.</span>
+                            </div>
                         </div>
                     </div>
                 </div>
