--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="description" content="Connecting people with e-Books and coffee shops.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Book and Coffee Shop Connector</title>
+    <title>Books 'n Brew</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Merienda+One|Oswald" rel="stylesheet">
