--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <link rel="icon" href="img/favicon.png" type="image/x-icon" />
     <meta charset="utf-8">
     <meta name="description" content="Connecting people with e-Books and coffee shops.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
